# ctf-flag-submitter

./: .gitignore  Cargo.toml  README.md  example.config.toml  test-postgresql.sql  test.sql
src/: database.rs  main.rs
