[package]
name = "flag-submitter"
version = "0.1.1"
authors = ["Joshua Chapman <joshua.samuel.chapman@protonmail.com>"]
edition = "2018"
description="Automatic Flag sumbitter for ctf challenges like CTF Forge, with throttle and quota limits."
license = "MIT"

[dependencies]
clap = "2.33"
postgres = "0.17"
reqwest = "0.10"
rusqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded","macros", "time"] }
toml = "0.5"
